Refatoração Register employee

--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastro Funcionário</title>
+    <title>Intralist | Cadastro Funcionário</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
           integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -44,7 +44,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" aria-label="Dashboard">
+                        <a class="nav-link" href="../dashboard/dashboard.html" aria-label="Dashboard">
                             <i class="fa-solid fa-chart-line me-1"></i> Dashboard
                         </a>
                     </li>
@@ -76,7 +76,8 @@
 
     <div class="row form-container">
         <div class="col-md-8 offset-md-2">
-            <h1 class="mt-2">Cadastro de Funcionário</h1>
+            <h2 class="mb-4 text-primary fw-bold text-center">Cadastro de Funcionário</h2>
+
 
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
                 <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
