Refatoração Register employee

--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label for="inputDepartamento" class="form-label">Departamento</label>
+                    <label class="form-label">Departamento</label>
                     <div class="search-container">
                         <input type="text" class="form-control" id="buscaDepartamento"
                                placeholder="Digite para buscar departamentos..." autocomplete="off">
