--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -76,7 +76,11 @@
 
     <div class="row form-container">
         <div class="col-md-8 offset-md-2">
-            <h2 class="mb-4 text-primary fw-bold text-center">Cadastro de Funcionário</h2>
+            <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1 class="h4 mb-0">
+                <i class="fas fa-users me-2 text-primary"></i>Cadastro de Funcionários
+            </h1>
+                </div>
 
 
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
@@ -147,7 +151,9 @@
                     </select>
                 </div>
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-success btn-submit">
+                    <button
+                            id="liveToastBtn"
+                            type="submit" class="btn btn-success btn-submit">
                         <i class="fas fa-save me-1"></i> Cadastrar
                     </button>
                 </div>
